--- a/astro/src/pages/presentations.astro
+++ b/astro/src/pages/presentations.astro
@@ -4,7 +4,6 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
-
 <!doctype html>
 <html lang="en">
 	<head>
@@ -12,12 +11,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	</head>
 	<body>
 		<Header />
-		<main>
-			<h1>Hello, World!</h1>
-			<p>
-				Welcome to my website!
-			</p>
-		</main>
-		<Footer />
-	</body>
+        <a href="https://docs.google.com/presentation/d/1WjG7Uu1qqN8in_QAQAFYQSH8yGOr_zhnHcHnQKvsJos/edit?usp=sharing" target='_self'></a>
+        <Footer />
+    </body>
 </html>
