--- a/astro/src/pages/presentations.astro
+++ b/astro/src/pages/presentations.astro
@@ -11,7 +11,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	</head>
 	<body>
 		<Header />
-        <a href="https://docs.google.com/presentation/d/1WjG7Uu1qqN8in_QAQAFYQSH8yGOr_zhnHcHnQKvsJos/edit?usp=sharing" target='_self'></a>
+        <main>
+            <a href="https://docs.google.com/presentation/d/1WjG7Uu1qqN8in_QAQAFYQSH8yGOr_zhnHcHnQKvsJos/edit?usp=sharing" target='_self'></a>
+
+        </main>
+
         <Footer />
     </body>
 </html>
