Presentations Page Fixed

--- a/astro/src/pages/presentations.astro
+++ b/astro/src/pages/presentations.astro
@@ -12,7 +12,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
         <main>
-            <a href="https://docs.google.com/presentation/d/1WjG7Uu1qqN8in_QAQAFYQSH8yGOr_zhnHcHnQKvsJos/edit?usp=sharing" target='_self'></a>
+            <a href="https://docs.google.com/presentation/d/1WjG7Uu1qqN8in_QAQAFYQSH8yGOr_zhnHcHnQKvsJos/edit?usp=sharing" target='_self'>INFO-I400 Presentation</a>
 
         </main>
 
