--- a/astro/src/components/Header.astro
+++ b/astro/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from '../consts';
 
 <header>
 	<nav>
-		<h2><a href="/"><img src="/name.png"></a></h2>
+		<h2><a href="/"><img src="/name.png" style="max-width: 30%;"></a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/presentations">Presentations</HeaderLink>
