About me hero pic

--- a/astro/src/pages/about.astro
+++ b/astro/src/pages/about.astro
@@ -5,11 +5,10 @@ import Layout from '../layouts/BlogPost.astro';
 <Layout
 	title="About Me"
 	description="About Me"
-	pubDate={new Date('August 08 2021')}
-	heroImage="/brian-hanley.png"
+	pubDate={new Date('October 01 2024')}
+	heroImage="/about-me-hero.png"
 >
 	<p>
 		AS Computer Science, AS Psychology, AA Anthropology
 	</p>
-	<img src="/brian-hanley.png" style="align:right;" />
 </Layout>
