--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -15,7 +15,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<main>
 			<h1>Hello, World!</h1>
 			<p>
-				Welcome to my website!
+				I'm Brian, a Data Science and Anthropology major at Indiana University. I have a diverse academic background in Computer Science, Anthropology, and Psychology. Solving
+				complex problems using data-driven approaches and building innovative human-centered solutions is my goal.
+			</p>
+			<p>
+				Throughout my academic journey and professional experiences, I have worked on a wide range of projects for small business up to enterprise solutions.
+				Each step of my journey has strengthened my expertise in Python, data analysis, and machine learning while allowing me to explore the deep social
+				and cultural dimensions of technology along the way.
+			</p>
+			<p>
+				Here you will find my latest projects, research, and presentations that showcase my ever growing skills. Let's connect and create something together.
 			</p>
 		</main>
 		<Footer />
