CV Template attempt II

--- a/astro/src/pages/cv.astro
+++ b/astro/src/pages/cv.astro
@@ -265,11 +265,11 @@ import LeftNav from "../components/LeftNav.astro"
             </div><!-- portfolio item -->
             <div class="portfolio_item photography vector">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_02.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../images/portfolio_02.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_02.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_02.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../images/portfolio_big_02.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../images/portfolio_big_02.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Photography</p>
                 </div>
@@ -277,11 +277,11 @@ import LeftNav from "../components/LeftNav.astro"
             </div><!-- portfolio item -->
             <div class="portfolio_item design illustration">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_03.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../images/portfolio_03.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_03.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_03.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../images/portfolio_big_03.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../images/portfolio_big_03.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Illustration</p>
                 </div>
@@ -289,11 +289,11 @@ import LeftNav from "../components/LeftNav.astro"
             </div><!-- portfolio item -->
             <div class="portfolio_item  vector">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_04.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../images/portfolio_04.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_04.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_04.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../images/portfolio_big_04.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../images/portfolio_big_04.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Vector</p>
                 </div>
@@ -301,11 +301,11 @@ import LeftNav from "../components/LeftNav.astro"
             </div><!-- portfolio item -->
             <div class="portfolio_item design illustration">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_05.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../images/portfolio_05.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_05.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_05.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../images/portfolio_big_05.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../images/portfolio_big_05.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Illustration</p>
                 </div>
@@ -313,11 +313,11 @@ import LeftNav from "../components/LeftNav.astro"
             </div><!-- portfolio item -->
             <div class="portfolio_item photography">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_06.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../images/portfolio_06.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_06.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_06.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../images/portfolio_big_06.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../images/portfolio_big_06.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Photography</p>
                 </div>
@@ -432,7 +432,7 @@ import LeftNav from "../components/LeftNav.astro"
             <div class="col-md-6 col-sm-6 col-xs-12">
               <div class="blog_item">
                 <div class=" post-thumb">
-                  <a href="single.html"><img src="../astro/src/images/blog_02.jpg" alt="Blog image" class="img-responsive"></a>
+                  <a href="single.html"><img src="../images/blog_02.jpg" alt="Blog image" class="img-responsive"></a>
                 </div><!-- blog image -->
                 <div class=" content">
                   <h4><a href="single.html">Compellingly Foster Premium Benefits.</a></h4>
@@ -542,14 +542,14 @@ import LeftNav from "../components/LeftNav.astro"
           </div><!-- section header -->
 
           <div class="client_items wow fadeInUp" data-wow-duration="2s">
-            <div><img src="../astro/src/images/client_01.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_02.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_03.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_04.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_01.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_02.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_03.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_04.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../images/client_01.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../images/client_02.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../images/client_03.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../images/client_04.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../images/client_01.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../images/client_02.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../images/client_03.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../images/client_04.jpg" alt="client image" class="img-responsive"></div>
           </div>
         </div><!-- body_container -->
       </section>
@@ -619,30 +619,30 @@ import LeftNav from "../components/LeftNav.astro"
 
 
     <!-- jQuery -->
-    <script src="../astro/src/js/jquery.min.js"></script>
-    <script src="../astro/src/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js" type="text/javascript"></script>
 
 
     <!-- Bootstrap Progressbar -->
-    <script src="../astro/src/js/bootstrap-progressbar.js"></script>
+    <script src="../js/bootstrap-progressbar.js"></script>
 
     <!-- Isotop -->
-    <script src="../astro/src/js/isotope.pkgd.min.js"></script>
+    <script src="../js/isotope.pkgd.min.js"></script>
 
     <!-- Lightcase -->
-    <script src="../astro/src/js/lightcase.js"></script>
+    <script src="../js/lightcase.js"></script>
 
     <!-- Easing -->
-    <script src="../astro/src/js/jquery.easing.min.js"></script>
+    <script src="../js/jquery.easing.min.js"></script>
 
     <!-- Slick -->
-    <script src="../astro/src/js/slick.js"></script>
+    <script src="../js/slick.js"></script>
 
     <!-- Google Map -->
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQlXnmyNPAeN3c3HNyWoUMqDk6bDF31Cg"></script>
 
     <!-- Custom -->
-    <script src="../astro/src/js/custom.js"></script>
+    <script src="../js/custom.js"></script>
 
 
   </body>
