--- a/astro/src/pages/cv.astro
+++ b/astro/src/pages/cv.astro
@@ -1,5 +1,6 @@
 ---
 import LeftNav from "../components/LeftNav.astro"
+import {SITE_TITLE} from "../consts";
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -15,28 +16,28 @@ import LeftNav from "../components/LeftNav.astro"
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i%7CPoppins:300,400,500,600,700" rel="stylesheet">
 
     <!-- Flaticon -->
-    <link href="../flat_icon/flaticon.css" rel="stylesheet">
+    <link href="/flat_icon/flaticon.css" rel="stylesheet">
 
     <!-- Font-awesome -->
-    <link href="../css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Bootstrap -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Lightcase -->
-    <link href="../css/lightcase.css" rel="stylesheet">
+    <link href="/css/lightcase.css" rel="stylesheet">
 
     <!-- Slick -->
-    <link href="../css/slick.css" rel="stylesheet">
+    <link href="/css/slick.css" rel="stylesheet">
 
     <!-- Slick theme -->
-    <link href="../css/slick-theme.css" rel="stylesheet">
+    <link href="/css/slick-theme.css" rel="stylesheet">
 
     <!-- Style -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 
     <!-- Responsive -->
-    <link href="../css/responsive.css" rel="stylesheet">
+    <link href="/css/responsive.css" rel="stylesheet">
 
 
   </head>
@@ -58,7 +59,7 @@ import LeftNav from "../components/LeftNav.astro"
         <div class="body_container">
           <div class="banner_content">
             <h4>Hi There! I am</h4>
-            <h2>Alex Mohon</h2>
+            <h2>{SITE_TITLE}</h2>
             <p>Professional Graphic Designer</p>
             <ul class="banner_social">
               <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
