--- a/astro/src/pages/cv.astro
+++ b/astro/src/pages/cv.astro
@@ -1,4 +1,5 @@
 ---
+import HeaderLink from "../components/HeaderLink.astro";
 import LeftNav from "../components/LeftNav.astro"
 import {SITE_TITLE} from "../consts";
 ---
