--- a/astro/src/pages/cv.astro
+++ b/astro/src/pages/cv.astro
@@ -1,47 +1,12 @@
 ---
 import HeaderLink from "../components/HeaderLink.astro";
 import LeftNav from "../components/LeftNav.astro"
+import CVHead from "../components/CVHead.astro";
 import {SITE_TITLE} from "../consts";
 ---
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Gentleman</title>
-
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i%7CPoppins:300,400,500,600,700" rel="stylesheet">
-
-    <!-- Flaticon -->
-    <link href="/flat_icon/flaticon.css" rel="stylesheet">
-
-    <!-- Font-awesome -->
-    <link href="/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- Bootstrap -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Lightcase -->
-    <link href="/css/lightcase.css" rel="stylesheet">
-
-    <!-- Slick -->
-    <link href="/css/slick.css" rel="stylesheet">
-
-    <!-- Slick theme -->
-    <link href="/css/slick-theme.css" rel="stylesheet">
-
-    <!-- Style -->
-    <link href="/css/style.css" rel="stylesheet">
-
-    <!-- Responsive -->
-    <link href="/css/responsive.css" rel="stylesheet">
-
-
-  </head>
+<CVHead />
   <body data-spy="scroll">
     <!-- Preloader start here -->
     <div class="preloader">
