--- a/astro/src/pages/cv.astro
+++ b/astro/src/pages/cv.astro
@@ -591,7 +591,7 @@ import {SITE_TITLE} from "../consts";
 
 
     <!-- Bootstrap Progressbar -->
-    <script src="../js/bootstrap-progressbar.js"></script>
+    <script src="/js/bootstrap-progressbar.js"></script>
 
     <!-- Isotop -->
     <script src="../js/isotope.pkgd.min.js"></script>
