--- a/astro/src/components/CVHead.astro
+++ b/astro/src/components/CVHead.astro
@@ -21,4 +21,30 @@ import {SITE_TITLE} from "../consts";
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i%7CPoppins:300,400,500,600,700" rel="stylesheet">
+
+    <!-- jQuery -->
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+
+
+    <!-- Bootstrap Progressbar -->
+    <script src="../js/bootstrap-progressbar.js"></script>
+
+    <!-- Isotop -->
+    <script src="../js/isotope.pkgd.min.js"></script>
+
+    <!-- Lightcase -->
+    <script src="../js/lightcase.js"></script>
+
+    <!-- Easing -->
+    <script src="../js/jquery.easing.min.js"></script>
+
+    <!-- Slick -->
+    <script src="../js/slick.js"></script>
+
+    <!-- Google Map -->
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQlXnmyNPAeN3c3HNyWoUMqDk6bDF31Cg"></script>
+
+    <!-- Custom -->
+    <script src="../js/custom.js"></script>
   </head>
