--- a/astro/src/components/CVHead.astro
+++ b/astro/src/components/CVHead.astro
@@ -24,7 +24,7 @@ import {SITE_TITLE} from "../consts";
 
     <!-- jQuery -->
     <script src="../js/jquery.min.js"></script>
-    <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 
     <!-- Bootstrap Progressbar -->
