--- a/astro/src/components/CVHead.astro
+++ b/astro/src/components/CVHead.astro
@@ -23,8 +23,8 @@ import {SITE_TITLE} from "../consts";
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i%7CPoppins:300,400,500,600,700" rel="stylesheet">
 
     <!-- jQuery -->
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+    <script is:inline src="../js/jquery.min.js"></script>
+    <script is:inline src="../js/bootstrap.min.js"></script>
 
 
     <!-- Bootstrap Progressbar -->
@@ -43,7 +43,7 @@ import {SITE_TITLE} from "../consts";
     <script src="../js/slick.js"></script>
 
     <!-- Google Map -->
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQlXnmyNPAeN3c3HNyWoUMqDk6bDF31Cg"></script>
+    <script is:inline type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQlXnmyNPAeN3c3HNyWoUMqDk6bDF31Cg"></script>
 
     <!-- Custom -->
     <script src="../js/custom.js"></script>
