CV JS Testing VI - Return of the File Structure

--- a/astro/src/components/LeftNav.astro
+++ b/astro/src/components/LeftNav.astro
@@ -10,7 +10,7 @@
           <span class="icon-bar third_icon"></span>
         </button>
         <div class="header_image">
-          <a href="index.html"><img src="../images/about.jpg" alt="Logo" class="img-responsive"></a>
+          <a href="index.html"><img src="../../public/images/about.jpg" alt="Logo" class="img-responsive"></a>
         </div>
 
         <ul class="left_menu nav">
