--- a/astro/src/css/style.css
+++ b/astro/src/css/style.css
@@ -784,7 +784,7 @@ body.top_padding{
 /*	06	- Banner Section
 ----------------------------------------------*/
 .banner{
-    background-image: url(../images/banner.jpg);
+    background-image: url(../../public/images/banner.jpg);
     height: 100vh;
     background-size: cover;
     background-position: 50% 50%;
@@ -795,7 +795,7 @@ body.top_padding{
     padding-top: 90px;
 }
 .banner-02{
-    background-image: url(../images/banner_02.png);
+    background-image: url(../../public/images/banner_02.png);
 }
 .banner .banner_content{
     position: absolute;
@@ -1740,7 +1740,7 @@ body.top_padding{
     position: absolute;
     left: -12px;
     top: -1px;
-    background-image: url(../../../astro/src/images/top.png);
+    background-image: url(../../public/images/top.png);
     width: 26px;
     height: 10px;
     z-index: 111;
@@ -1750,7 +1750,7 @@ body.top_padding{
     position: absolute;
     right: -12px;
     top: -1px;
-    background-image: url(../../../astro/src/images/top.png);
+    background-image: url(../../public/images/top.png);
     width: 26px;
     height: 10px;
     z-index: 111;
@@ -1760,7 +1760,7 @@ body.top_padding{
     position: absolute;
     left: -12px;
     bottom: -7px;
-    background-image: url(../../../astro/src/images/bottom.png);
+    background-image: url(../../public/images/bottom.png);
     width: 20px;
     height: 15px;
     z-index: 111;
@@ -1770,7 +1770,7 @@ body.top_padding{
     position: absolute;
     right: -7px;
     bottom: -7px;
-    background-image: url(../../../astro/src/images/bottom.png);
+    background-image: url(../../public/images/bottom.png);
     width: 20px;
     height: 15px;
     z-index: 111;
