--- a/astro/src/pages/cv.astro
+++ b/astro/src/pages/cv.astro
@@ -232,11 +232,11 @@ import {SITE_TITLE} from "../consts";
             </div><!-- portfolio item -->
             <div class="portfolio_item photography vector">
               <div class="pos_rel">
-                <img src="../images/portfolio_02.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../../public/images/portfolio_02.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../images/portfolio_big_02.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../images/portfolio_big_02.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../../public/images/portfolio_big_02.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../../public/images/portfolio_big_02.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Photography</p>
                 </div>
@@ -244,11 +244,11 @@ import {SITE_TITLE} from "../consts";
             </div><!-- portfolio item -->
             <div class="portfolio_item design illustration">
               <div class="pos_rel">
-                <img src="../images/portfolio_03.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../../public/images/portfolio_03.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../images/portfolio_big_03.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../images/portfolio_big_03.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../../public/images/portfolio_big_03.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../../public/images/portfolio_big_03.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Illustration</p>
                 </div>
@@ -256,11 +256,11 @@ import {SITE_TITLE} from "../consts";
             </div><!-- portfolio item -->
             <div class="portfolio_item  vector">
               <div class="pos_rel">
-                <img src="../images/portfolio_04.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../../public/images/portfolio_04.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../images/portfolio_big_04.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../images/portfolio_big_04.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../../public/images/portfolio_big_04.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../../public/images/portfolio_big_04.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Vector</p>
                 </div>
@@ -268,11 +268,11 @@ import {SITE_TITLE} from "../consts";
             </div><!-- portfolio item -->
             <div class="portfolio_item design illustration">
               <div class="pos_rel">
-                <img src="../images/portfolio_05.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../../public/images/portfolio_05.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../images/portfolio_big_05.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../images/portfolio_big_05.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../../public/images/portfolio_big_05.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../../public/images/portfolio_big_05.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Illustration</p>
                 </div>
@@ -280,11 +280,11 @@ import {SITE_TITLE} from "../consts";
             </div><!-- portfolio item -->
             <div class="portfolio_item photography">
               <div class="pos_rel">
-                <img src="../images/portfolio_06.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../../public/images/portfolio_06.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../images/portfolio_big_06.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../images/portfolio_big_06.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../../public/images/portfolio_big_06.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../../public/images/portfolio_big_06.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Photography</p>
                 </div>
@@ -399,7 +399,7 @@ import {SITE_TITLE} from "../consts";
             <div class="col-md-6 col-sm-6 col-xs-12">
               <div class="blog_item">
                 <div class=" post-thumb">
-                  <a href="single.html"><img src="../images/blog_02.jpg" alt="Blog image" class="img-responsive"></a>
+                  <a href="single.html"><img src="../../public/images/blog_02.jpg" alt="Blog image" class="img-responsive"></a>
                 </div><!-- blog image -->
                 <div class=" content">
                   <h4><a href="single.html">Compellingly Foster Premium Benefits.</a></h4>
@@ -509,14 +509,14 @@ import {SITE_TITLE} from "../consts";
           </div><!-- section header -->
 
           <div class="client_items wow fadeInUp" data-wow-duration="2s">
-            <div><img src="../images/client_01.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../images/client_02.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../images/client_03.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../images/client_04.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../images/client_01.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../images/client_02.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../images/client_03.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../images/client_04.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../../public/images/client_01.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../../public/images/client_02.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../../public/images/client_03.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../../public/images/client_04.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../../public/images/client_01.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../../public/images/client_02.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../../public/images/client_03.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../../public/images/client_04.jpg" alt="client image" class="img-responsive"></div>
           </div>
         </div><!-- body_container -->
       </section>
