CV JS Testing VII - The JavaScript Awakens

--- a/astro/src/components/CVHead.astro
+++ b/astro/src/components/CVHead.astro
@@ -23,28 +23,28 @@ import {SITE_TITLE} from "../consts";
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i%7CPoppins:300,400,500,600,700" rel="stylesheet">
 
     <!-- jQuery -->
-    <script is:inline src="../js/jquery.min.js"></script>
-    <script is:inline src="../js/bootstrap.min.js"></script>
+    <script is:inline src="../../public/js/jquery.min.js"></script>
+    <script is:inline src="../../public/js/bootstrap.min.js"></script>
 
 
     <!-- Bootstrap Progressbar -->
-    <script src="../js/bootstrap-progressbar.js"></script>
+    <script src="/js/bootstrap-progressbar.js"></script>
 
     <!-- Isotop -->
-    <script src="../js/isotope.pkgd.min.js"></script>
+    <script src="/js/isotope.pkgd.min.js"></script>
 
     <!-- Lightcase -->
-    <script src="../js/lightcase.js"></script>
+    <script src="/js/lightcase.js"></script>
 
     <!-- Easing -->
-    <script src="../js/jquery.easing.min.js"></script>
+    <script src="/js/jquery.easing.min.js"></script>
 
     <!-- Slick -->
-    <script src="../js/slick.js"></script>
+    <script src="/js/slick.js"></script>
 
     <!-- Google Map -->
     <script is:inline type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQlXnmyNPAeN3c3HNyWoUMqDk6bDF31Cg"></script>
 
     <!-- Custom -->
-    <script src="../js/custom.js"></script>
+    <script src="/js/custom.js"></script>
   </head>
