--- a/astro/src/components/CVHead.astro
+++ b/astro/src/components/CVHead.astro
@@ -28,23 +28,23 @@ import {SITE_TITLE} from "../consts";
 
 
     <!-- Bootstrap Progressbar -->
-    <script src="/js/bootstrap-progressbar.js"></script>
+    <script is:inline src="/js/bootstrap-progressbar.js"></script>
 
     <!-- Isotop -->
-    <script src="/js/isotope.pkgd.min.js"></script>
+    <script is:inline src="/js/isotope.pkgd.min.js"></script>
 
     <!-- Lightcase -->
-    <script src="/js/lightcase.js"></script>
+    <script is:inline src="/js/lightcase.js"></script>
 
     <!-- Easing -->
-    <script src="/js/jquery.easing.min.js"></script>
+    <script is:inline src="/js/jquery.easing.min.js"></script>
 
     <!-- Slick -->
-    <script src="/js/slick.js"></script>
+    <script is:inline src="/js/slick.js"></script>
 
     <!-- Google Map -->
     <script is:inline type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQlXnmyNPAeN3c3HNyWoUMqDk6bDF31Cg"></script>
 
     <!-- Custom -->
-    <script src="/js/custom.js"></script>
+    <script is:inline src="/js/custom.js"></script>
   </head>
