--- a/astro/src/components/CVHead.astro
+++ b/astro/src/components/CVHead.astro
@@ -23,8 +23,8 @@ import {SITE_TITLE} from "../consts";
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i%7CPoppins:300,400,500,600,700" rel="stylesheet">
 
     <!-- jQuery -->
-    <script is:inline src="../../public/js/jquery.min.js"></script>
-    <script is:inline src="../../public/js/bootstrap.min.js"></script>
+    <script is:inline src="/js/jquery.min.js"></script>
+    <script is:inline src="/js/bootstrap.min.js"></script>
 
 
     <!-- Bootstrap Progressbar -->
