--- a/astro/src/components/CVHead.astro
+++ b/astro/src/components/CVHead.astro
@@ -1,12 +1,4 @@
 ---
-import '../flat_icon/flaticon.css';
-import '../css/font-awesome.min.css';
-import '../css/bootstrap.min.css';
-import '../css/lightcase.css';
-import '../css/slick.css';
-import '../css/slick-theme.css';
-import '../css/responsive.css';
-import '../css/style.css';
 
 
 import {SITE_TITLE} from "../consts";
@@ -17,6 +9,16 @@ import {SITE_TITLE} from "../consts";
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>{SITE_TITLE}</title>
+
+    <link rel="stylesheet" href="/flat_icon/flaticon.css"/>
+    <link rel="stylesheet" href="/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/lightcase.css"/>
+    <link rel="stylesheet" href="/css/slick.css"/>
+    <link rel="stylesheet" href="/css/slick-theme.css"/>
+    <link rel="stylesheet" href="/css/responsive.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
+
 
 
     <!-- Fonts -->
@@ -43,7 +45,7 @@ import {SITE_TITLE} from "../consts";
     <script is:inline src="/js/slick.js"></script>
 
     <!-- Google Map -->
-    <script is:inline type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQlXnmyNPAeN3c3HNyWoUMqDk6bDF31Cg"></script>
+    <script is:inline type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQlXnmyNPAeN3c3HNyWoUMqDk6bDF31Cg"></script>
 
     <!-- Custom -->
     <script is:inline src="/js/custom.js"></script>
