--- a/astro/src/pages/cv.astro
+++ b/astro/src/pages/cv.astro
@@ -509,14 +509,14 @@ import {SITE_TITLE} from "../consts";
           </div><!-- section header -->
 
           <div class="client_items wow fadeInUp" data-wow-duration="2s">
-            <div><img src="../../public/images/client_01.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../../public/images/client_02.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../../public/images/client_03.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../../public/images/client_04.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../../public/images/client_01.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../../public/images/client_02.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../../public/images/client_03.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../../public/images/client_04.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="/images/client_01.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="/images/client_02.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="/images/client_03.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="/images/client_04.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="/images/client_01.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="/images/client_02.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="/images/client_03.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="/images/client_04.jpg" alt="client image" class="img-responsive"></div>
           </div>
         </div><!-- body_container -->
       </section>
