Poisson Problem 1 Getting Started

--- a/astro/src/components/SowLeft.astro
+++ b/astro/src/components/SowLeft.astro
@@ -5,9 +5,9 @@
        	  <div id="navigation">
        	  	<a href="/sow">Statistics of WoW Home</a>
             <a href="/">BrianHanley.dev</a>
-            <a href="#">Nav Item3</a>
+            <!--<a href="#">Nav Item3</a>
             <a href="#">Nav Item4</a>
             <a href="#">Nav Item5</a>
-            <a href="#">Nav Item6</a>
+            <a href="#">Nav Item6</a>-->
           </div>
       </div>
