--- a/astro/src/components/SowRight.astro
+++ b/astro/src/components/SowRight.astro
@@ -2,7 +2,7 @@
 
 ---
         <div id="right_column">
-       	  <div class="box">Poll:</div>
+       	  <!--<div class="box">Poll:</div>
             <div class="box">Features:</div>
-          <div class="box">Links:</div>
+          <div class="box">Links:</div>-->
         </div>
