--- a/astro/src/styles/style1.css
+++ b/astro/src/styles/style1.css
@@ -49,3 +49,9 @@ body { margin:0; font:12px Tahoma; color:#d8f2ff; background:url(../images/bg2.j
 		border-radius: 5px;
 	}
 	summary{width:95%; background-size: cover}
+	summary::before{
+		content:"▶ "
+	}
+	details[open] summary::before{
+		content:"▼ "
+	}
