Downloads Page update

--- a/astro/src/pages/downloads.astro
+++ b/astro/src/pages/downloads.astro
@@ -13,8 +13,10 @@ import BaseHead from "../components/BaseHead.astro";
 	<body>
 		<Header />
         <main>
-            <a href="/265-midterm-2.pdf" target='_self'>MATH-E265 FA24 Formula Sheet</a>
-
+            <ul>
+                <li><a href="/265-midterm-2.pdf" target='_self'>MATH-E265 FA24 Formula Sheet</a></li>
+                <li><a href="https://docs.google.com/presentation/d/1FxGmZJahpn3XRRF0acd3RuvW72GkizlraeTkFnYmtWc/edit?usp=sharing" target="_self">INFO-I400 Final Presentation Slides</a></li>
+            </ul>
         </main>
 
         <Footer />
