--- a/astro/src/pages/newindex.astro
+++ b/astro/src/pages/newindex.astro
@@ -37,7 +37,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                                     <span class="cd-words-wrapper">
                                         <b class="is-visible">Developer</b>
                                         <b class="is-hidden">Data Analyst</b>
-                                        <b class="is-hidden">Anthropology Fanatic</b>
+                                        <b class="is-hidden">Anthropologist</b>
                                     </span>
                                 </span>
                                 <!-- type headline end -->
@@ -58,19 +58,19 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 </div>
                 <div class="personal-social">
                     <ul>
-                        <li class="twitter">
-                            <a href="https://twitter.com/data_and_food">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
                         <li class="bluesky">
                             <a href="https://bsky.app/profile/food-and-data.bsky.social">
                                 <i class="fab fa-bluesky"></i>
                             </a>
                         </li>
-                        <li class="dribbble">
+                        <li class="twitter">
+                            <a href="https://twitter.com/data_and_food">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li class="linkedin">
                             <a href="#">
-                                <i class="fab fa-dribbble"></i>
+                                <i class="fab fa-linkedin"></i>
                             </a>
                         </li>
                     </ul>
