--- a/astro/src/pages/presentations.astro
+++ b/astro/src/pages/presentations.astro
@@ -8,7 +8,7 @@ const presentations = [
     {course: "INFO-I400 Creativity, Innovation & Tech", presentation_title: "The Cost of Creativity", link:"https://docs.google.com/presentation/d/1WjG7Uu1qqN8in_QAQAFYQSH8yGOr_zhnHcHnQKvsJos/edit?usp=sharing", image: "/the-cost-of-creativity.png"},
     {course: "INFO-I400 Creativity, Innovation & Tech", presentation_title: "Imitators in Streaming Services", link:"https://docs.google.com/presentation/d/1zOvXUreW2UYo2rc7NO4jrsa_WiSOwnKZHoW5AXAGaPc/edit?usp=sharing", image: "/imitators-in-streaming-services.png"},
     {course: "INFO-I400 Creativity, Innovation & Tech", presentation_title: "Consumer-Driven Innovation", link:"https://docs.google.com/presentation/d/1FxGmZJahpn3XRRF0acd3RuvW72GkizlraeTkFnYmtWc/edit?usp=sharing", image: "/consumer-driven-innovation.png"},
-    {course: "INFO-I422", presentation_title: "Azeroth Data", link:"https://docs.google.com/presentation/d/1Xk--4Tch4rgrAE46k9XhEXeAe0wUUZKnTtqfU7YPKIo/edit?usp=sharing", image: "/consumer-driven-innovation.png"},
+    {course: "INFO-I422 Data Visualization", presentation_title: "Azeroth Data", link:"https://docs.google.com/presentation/d/1Xk--4Tch4rgrAE46k9XhEXeAe0wUUZKnTtqfU7YPKIo/edit?usp=sharing", image: "/azeroth-data.png"},
 ]
 ---
 <!doctype html>
