--- a/astro/src/pages/downloads.astro
+++ b/astro/src/pages/downloads.astro
@@ -17,6 +17,7 @@ import BaseHead from "../components/BaseHead.astro";
                 <li><a href="/265-midterm-2.pdf" target='_self'>MATH-E265 FA24 Formula Sheet</a></li>
                 <li><a href="https://docs.google.com/presentation/d/1FxGmZJahpn3XRRF0acd3RuvW72GkizlraeTkFnYmtWc/edit?usp=sharing" target="_blank">INFO-I400 Final Presentation Slides</a></li>
                 <li><a href="https://docs.google.com/document/d/1qJIUoPnstlLgNcX-j7fwx-LU930xwRx6Q9sny2TD9uo/edit?usp=sharing" target="_blank">INFO-I400 Final Presentation Script</a> </li>
+				<li><a href="https://docs.google.com/presentation/d/1XBYqWx-C8yWx2bhPUf3GeneF11mvJhVDZQcUsaK_WFo/edit?usp=sharing" target="_self">Training Update Proposals</a></li>
             </ul>
         </main>
 
